# my_data

./: rpi_swap_enabler.sh  zshrc.bak
Custom_Scripts/: lib_compare.py
Custom_Scripts/Cronjobs_tests/: requirements.txt
Custom_Scripts/Cronjobs_tests/Service_files/: HTBB_cron_check.service  rc_time_push_cron_check.service  (+2 more)
Custom_Scripts/Log_error_reader/: sshkeys
Custom_Scripts/Log_parser/: README.md  pyproject.toml
Custom_Scripts/Log_parser/log_parser/: ENC_command.py  QZBC.py  main.py  requirements.txt
Custom_Scripts/Reboot/: main.py
Custom_Scripts/csv_parser/: Pipfile
Custom_Scripts/custom_cmd_script/: custom_command.py  response.txt
Custom_Scripts/log_reader/: Pipfile  main.py  zeta3.py
Custom_bash_scripts/: shell_env_setup.sh
Custom_python_Scripts/: batterymonitering.py
Custom_python_Scripts/Cronjobs_tests/: Pipfile  requirements.txt
Custom_python_Scripts/DST2_response/: Pipfile  main.py
Custom_python_Scripts/Log_error_reader/: Pipfile  log_reader.py  requirements.txt
Custom_python_Scripts/Reboot/: Pipfile
Custom_python_Scripts/csv_parser/: CSV_Parser.ipynb
Custom_python_Scripts/custom_cmd_script/: Pipfile
Custom_python_Scripts/log_reader/: Zeta2.py  log_errors_system_data_2023-02-14 17_00_57.xlsx  requirements.txt
Custom_python_Scripts/zeta3_log_reader/: zeta3_log_reader.py
Dockerfiles/: Dockerfile-py-alpine-10  Dockerfile-py-alpine-11  Dockerfile-py-full-10  Dockerfile-py-full-11
backups/: gitconfig.bak  kitty.conf  tmux.conf.local.bak  zshrc.bak
backups/alacritty/: alacritty.toml
backups/nvim_config/: before_setup.md
(+21 files in other folders)
