[tool.poetry]
name = "log_parser"
version = "0.1.0"
description = ""
authors = ["R Vigneswar <rvigneswar@ftcsolar.com>"]
readme = "README.md"
packages = [{include = "log_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
numpy = "^1.25.0"
matplotlib = "^3.7.2"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
